@@ -3,6 +3,8 @@
  *
  * Some code copyright (C) 2002, Philip S Tellis <philip . tellis AT gmx . net>
  *
+ * Yahoo Search copyright (C) 2003, Konstantin Klyagin <konst@konst.org.ua>
+ *
  * Much of this code was taken and adapted from the yahoo module for
  * gaim released under the GNU GPL.  This code is also released under the 
  * GNU GPL.
@@ -215,10 +217,23 @@ struct yahoo_packet {
 	YList *hash;
 };
 
+struct yahoo_search_state {
+	int   lsearch_type;
+	char  *lsearch_text;
+	int   lsearch_gender;
+	int   lsearch_agerange;
+	int   lsearch_photo;
+	int   lsearch_yahoo_only;
+	int   lsearch_nstart;
+	int   lsearch_nfound;
+	int   lsearch_ntotal;
+};
+
 struct yahoo_input_data {
 	struct yahoo_data *yd;
 	struct yahoo_webcam *wcm;
 	struct yahoo_webcam_data *wcd;
+	struct yahoo_search_state *ys;
 
 	int   fd;
 	enum yahoo_connection_type type;
@@ -791,6 +806,10 @@ static void yahoo_input_close(struct yahoo_input_data *yid)
 	yahoo_free_webcam(yid->wcm);
 	if(yid->wcd)
 		FREE(yid->wcd);
+	if(yid->ys) {
+		FREE(yid->ys->lsearch_text);
+		FREE(yid->ys);
+	}
 	FREE(yid);
 }
 
@@ -1675,7 +1694,7 @@ static void yahoo_process_auth_0x0b(struct yahoo_input_data *yid, const char *se
 		if (isalpha(*magic_ptr) || isdigit(*magic_ptr)) {
 			loc = strchr(challenge_lookup, *magic_ptr);
 			if (!loc) {
-			        /* This isn't good */
+				/* This isn't good */
 				continue;
 			}
 
@@ -1691,7 +1710,7 @@ static void yahoo_process_auth_0x0b(struct yahoo_input_data *yid, const char *se
 
 			loc = strchr(operand_lookup, *magic_ptr);
 			if (!loc) {
-			        /* Also not good. */
+				/* Also not good. */
 				continue;
 			}
 
@@ -1699,7 +1718,7 @@ static void yahoo_process_auth_0x0b(struct yahoo_input_data *yid, const char *se
 
 			/* Oops; how did this happen? */
 			if (magic_cnt >= 64) 
-			        break;
+				break;
 
 			magic[magic_cnt++] = magic_work | local_store;
 			magic_ptr++;
@@ -1720,7 +1739,7 @@ static void yahoo_process_auth_0x0b(struct yahoo_input_data *yid, const char *se
 		/* Bad.  Abort.
 		 */
 		if ((magic_cnt + 1 > magic_len) || 
-		    (magic_cnt > magic_len))
+				(magic_cnt > magic_len))
 			break;
 
 		byte1 = magic[magic_cnt];
@@ -1751,21 +1770,21 @@ static void yahoo_process_auth_0x0b(struct yahoo_input_data *yid, const char *se
 			bl = cl;
 		else {
 			if (cl >= 0x0e0) {
-			        cl = cl & 0x0f;
-			        cl = cl << 6;
-			        bl = bl & 0x3f;
-			        bl = cl + bl;
-			        bl = bl << 6;
+				cl = cl & 0x0f;
+				cl = cl << 6;
+				bl = bl & 0x3f;
+				bl = cl + bl;
+				bl = bl << 6;
 			} else {
-			        cl = cl & 0x1f;
-			        cl = cl << 6;
-			        bl = cl;
+				cl = cl & 0x1f;
+				cl = cl << 6;
+				bl = cl;
 			}
 
 			cl = magic[magic_cnt+2];
 
 			if (!cl)
-			        break;
+				break;
 
 			cl = cl & 0x3f;
 			bl = bl + cl;
@@ -1778,10 +1797,10 @@ static void yahoo_process_auth_0x0b(struct yahoo_input_data *yid, const char *se
 
 		if (times == 0) {
 			value |= (bl & 0xff) << 8; 
-			value |= (bl & 0xff00) >> 8;           
+			value |= (bl & 0xff00) >> 8;
 		} else { 
 			value |= (bl & 0xff) << 24; 
-			value |= (bl & 0xff00) << 8;           
+			value |= (bl & 0xff00) << 8;
 			break; 
 		} 
 
@@ -2525,7 +2544,7 @@ static struct yahoo_packet * yahoo_getdata(struct yahoo_input_data * yid)
 	pkt->service = yahoo_get16(yid->rxqueue + pos); pos += 2;
 	pkt->status = yahoo_get32(yid->rxqueue + pos); pos += 4;
 	DEBUG_MSG(("Yahoo Service: 0x%02x Status: %d", pkt->service,
-		       pkt->status));
+				pkt->status));
 	pkt->id = yahoo_get32(yid->rxqueue + pos); pos += 4;
 
 	yd->session_id = pkt->id;
@@ -2644,7 +2663,7 @@ static struct yab * yahoo_getyab(struct yahoo_input_data *yid)
 	end = pos+2;
 	/* end with /> */
 	while(end < yid->rxlen-strlen("/>")+1 && memcmp(yid->rxqueue + end, "/>", strlen("/>")))
-	       	end++;
+		end++;
 
 	if(end >= yid->rxlen-1)
 		return NULL;
@@ -2790,7 +2809,7 @@ static int yahoo_get_webcam_data(struct yahoo_input_data *yid)
 		case 0x00:
 			/* user requests to view webcam (uploading) */
 			if (yid->wcd->data_size &&
-			    yid->wcm->direction == YAHOO_WEBCAM_UPLOAD) {
+				yid->wcm->direction == YAHOO_WEBCAM_UPLOAD) {
 				end = begin;
 				while (end <= yid->rxlen &&
 					yid->rxqueue[end++] != 13);
@@ -2886,11 +2905,14 @@ int yahoo_write_ready(int id, int fd, void *data)
 	return 1;
 }
 
-static void yahoo_process_pager_connection(struct yahoo_input_data *yid)
+static void yahoo_process_pager_connection(struct yahoo_input_data *yid, int over)
 {
 	struct yahoo_packet *pkt;
 	struct yahoo_data *yd = yid->yd;
 	int id = yd->client_id;
+
+	if(over)
+		return;
 
 	while (find_input_by_id_and_type(id, YAHOO_CONNECTION_PAGER) 
 			&& (pkt = yahoo_getdata(yid)) != NULL) {
@@ -2901,24 +2923,30 @@ static void yahoo_process_pager_connection(struct yahoo_input_data *yid)
 	}
 }
 
-static void yahoo_process_ft_connection(struct yahoo_input_data *yid)
+static void yahoo_process_ft_connection(struct yahoo_input_data *yid, int over)
 {
 }
 
-static void yahoo_process_chatcat_connection(struct yahoo_input_data *yid)
+static void yahoo_process_chatcat_connection(struct yahoo_input_data *yid, int over)
 {
+	if(over)
+		return;
+
 	if (strstr((char*)yid->rxqueue+(yid->rxlen-20), "</content>")) {
 		YAHOO_CALLBACK(ext_yahoo_chat_cat_xml)(yid->yd->client_id, (char*)yid->rxqueue);
 	}
 }
 
-static void yahoo_process_yab_connection(struct yahoo_input_data *yid)
+static void yahoo_process_yab_connection(struct yahoo_input_data *yid, int over)
 {
 	struct yahoo_data *yd = yid->yd;
 	struct yab *yab;
 	YList *buds;
 	int changed=0;
 	int id = yd->client_id;
+
+	if(over)
+		return;
 
 	while(find_input_by_id_and_type(id, YAHOO_CONNECTION_YAB) 
 			&& (yab = yahoo_getyab(yid)) != NULL) {
@@ -2950,6 +2978,81 @@ static void yahoo_process_yab_connection(struct yahoo_input_data *yid)
 		YAHOO_CALLBACK(ext_yahoo_got_buddies)(yd->client_id, yd->buddies);
 }
 
+static void yahoo_process_search_connection(struct yahoo_input_data *yid, int over)
+{
+	struct yahoo_found_contact *yct;
+	char *p = (char *)yid->rxqueue, *np, *cp;
+	int k, n;
+	int start, found, total;
+	YList *contacts;
+
+	if(!over)
+		return;
+
+	if(p && (p=strstr(p, "\r\n\r\n"))) {
+		p += 4;
+
+		for(k = 0; (p = strchr(p, 4)) && (k < 4); k++) {
+			p++;
+			n = atoi(p);
+			switch(k) {
+				case 0: found = yid->ys->lsearch_nfound = n; break;
+				case 2: start = yid->ys->lsearch_nstart = n; break;
+				case 3: total = yid->ys->lsearch_ntotal = n; break;
+			}
+		}
+
+		if(p)
+			p++;
+
+		k=0;
+		while(p && *p) {
+			cp = p;
+			np = strchr(p, 4);
+
+			if(!np)
+				break;
+			*np = 0;
+			p = np+1;
+
+			switch(k++) {
+				case 1:
+					if(strlen(cp) > 2 && y_list_length(contacts) < total) {
+						yct = y_new0(struct yahoo_found_contact, 1);
+						contacts = y_list_append(contacts, yct);
+						yct->id = cp+2;
+					} else {
+						*p = 0;
+					}
+					break;
+				case 2: 
+					yct->online = !strcmp(cp, "2") ? 1 : 0;
+					break;
+				case 3: 
+					yct->gender = cp;
+					break;
+				case 4: 
+					yct->age = atoi(cp);
+					break;
+				case 5: 
+					if(cp != "\005")
+						yct->location = cp;
+					k = 0;
+					break;
+			}
+		}
+	}
+
+	YAHOO_CALLBACK(ext_yahoo_got_search_result)(yid->yd->client_id, found, start, total, contacts);
+
+	while(contacts) {
+		YList *node = contacts;
+		contacts = y_list_remove_link(contacts, node);
+		free(node->data);
+		y_list_free_1(node);
+	}
+}
+
 static void _yahoo_webcam_connected(int fd, int error, void *d)
 {
 	struct yahoo_input_data *yid = d;
@@ -2972,7 +3075,7 @@ static void _yahoo_webcam_connected(int fd, int error, void *d)
 	inputs = y_list_prepend(inputs, yid);
 
 	LOG(("Connected"));
-       	/* send initial packet */
+	/* send initial packet */
 	switch (wcm->direction)
 	{
 		case YAHOO_WEBCAM_DOWNLOAD:
@@ -3079,10 +3182,13 @@ static void yahoo_webcam_connect(struct yahoo_input_data *y)
 
 }
 
-static void yahoo_process_webcam_master_connection(struct yahoo_input_data *yid)
+static void yahoo_process_webcam_master_connection(struct yahoo_input_data *yid, int over)
 {
 	char* server;
 	struct yahoo_server_settings *yss;
+
+	if(over)
+		return;
 
 	server = yahoo_getwebcam_master(yid);
 
@@ -3100,23 +3206,27 @@ static void yahoo_process_webcam_master_connection(struct yahoo_input_data *yid)
 	}
 }
 
-static void yahoo_process_webcam_connection(struct yahoo_input_data *yid)
+static void yahoo_process_webcam_connection(struct yahoo_input_data *yid, int over)
 {
 	int id = yid->yd->client_id;
 	int fd = yid->fd;
+
+	if(over)
+		return;
 
 	/* as long as we still have packets available keep processing them */
 	while (find_input_by_id_and_fd(id, fd) 
 			&& yahoo_get_webcam_data(yid) == 1);
 }
 
-static void (*yahoo_process_connection[])(struct yahoo_input_data *) = {
+static void (*yahoo_process_connection[])(struct yahoo_input_data *, int over) = {
 	yahoo_process_pager_connection,
 	yahoo_process_ft_connection,
 	yahoo_process_yab_connection,
 	yahoo_process_webcam_master_connection,
 	yahoo_process_webcam_connection,
-	yahoo_process_chatcat_connection
+	yahoo_process_chatcat_connection,
+	yahoo_process_search_connection
 };
 
 int yahoo_read_ready(int id, int fd, void *data)
@@ -3138,8 +3248,11 @@ int yahoo_read_ready(int id, int fd, void *data)
 		int e = errno;
 		DEBUG_MSG(("len == %d (<= 0)", len));
 
-		if(yid->type == YAHOO_CONNECTION_PAGER)
-			yid->yd->current_status = -1;
+		if(yid->type == YAHOO_CONNECTION_PAGER) {
+			YAHOO_CALLBACK(ext_yahoo_login_response)(yid->yd->client_id, YAHOO_LOGIN_SOCK, NULL);
+		}
+
+		yahoo_process_connection[yid->type](yid, 1);
 		yahoo_input_close(yid);
 
 		/* no need to return an error, because we've already fixed it */
@@ -3154,7 +3267,7 @@ int yahoo_read_ready(int id, int fd, void *data)
 	memcpy(yid->rxqueue + yid->rxlen, buf, len);
 	yid->rxlen += len;
 
-	yahoo_process_connection[yid->type](yid);
+	yahoo_process_connection[yid->type](yid, 0);
 
 	return len;
 }
@@ -4084,6 +4197,88 @@ void yahoo_webcam_invite(int id, const char *who)
 	yahoo_send_packet(yid->fd, pkt, 0);
 
 	yahoo_packet_free(pkt);
+}
+
+static void yahoo_search_internal(int id, int t, const char *text, int g, int ar, int photo, int yahoo_only, int startpos, int total)
+{
+	struct yahoo_data *yd = find_conn_by_id(id);
+	struct yahoo_input_data *yid;
+	char url[1024];
+	char buff[1024];
+	char *ctext, *p;
+
+	if(!yd)
+		return;
+
+	yid = y_new0(struct yahoo_input_data, 1);
+	yid->yd = yd;
+	yid->type = YAHOO_CONNECTION_SEARCH;
+
+	/*
+	age range
+	.ar=1 - 13-18, 2 - 18-25, 3 - 25-35, 4 - 35-50, 5 - 50-70, 6 - 70+
+	*/
+
+	snprintf(buff, sizeof(buff), "&.sq=%%20&.tt=%d&.ss=%d", total, startpos);
+
+	ctext = strdup(text);
+	while((p = strchr(ctext, ' ')))
+		*p = '+';
+
+	snprintf(url, 1024, "http://members.yahoo.com/interests?.oc=m&.kw=%s&.sb=%d&.g=%d&.ar=0%s%s%s",
+			ctext, t, g, photo ? "&.p=y" : "", yahoo_only ? "&.pg=y" : "",
+			startpos ? buff : "");
+
+	FREE(ctext);
+
+	snprintf(buff, sizeof(buff), "Y=%s; T=%s", yd->cookie_y, yd->cookie_t);
+
+	inputs = y_list_prepend(inputs, yid);
+	yahoo_http_get(yid->yd->client_id, url, buff, _yahoo_http_connected, yid);
+}
+
+void yahoo_search(int id, enum yahoo_search_type t, const char *text, enum yahoo_search_gender g, enum yahoo_search_agerange ar, 
+		int photo, int yahoo_only)
+{
+	struct yahoo_input_data *yid = find_input_by_id_and_type(id, YAHOO_CONNECTION_PAGER);
+	struct yahoo_search_state *yss;
+
+	if(!yid)
+		return;
+
+	if(!yid->ys)
+		yid->ys = y_new0(struct yahoo_search_state, 1);
+
+	yss = yid->ys;
+
+	FREE(yss->lsearch_text);
+	yss->lsearch_type = t;
+	yss->lsearch_text = strdup(text);
+	yss->lsearch_gender = g;
+	yss->lsearch_agerange = ar;
+	yss->lsearch_photo = photo;
+	yss->lsearch_yahoo_only = yahoo_only;
+
+	yahoo_search_internal(id, t, text, g, ar, photo, yahoo_only, 0, 0);
+}
+
+void yahoo_search_again(int id, int start)
+{
+	struct yahoo_input_data *yid = find_input_by_id_and_type(id, YAHOO_CONNECTION_PAGER);
+	struct yahoo_search_state *yss;
+
+	if(!yid || !yid->ys)
+		return;
+
+	yss = yid->ys;
+
+	if(start == -1)
+		start = yss->lsearch_nstart + yss->lsearch_nfound;
+
+	yahoo_search_internal(id, yss->lsearch_type, yss->lsearch_text, 
+			yss->lsearch_gender, yss->lsearch_agerange, 
+			yss->lsearch_photo, yss->lsearch_yahoo_only, 
+			start, yss->lsearch_ntotal);
 }
 
 struct send_file_data {
