@@ -521,6 +521,19 @@ void YAHOO_CALLBACK_TYPE(ext_yahoo_webcam_invite_reply)(int id, char *from, int 
 void YAHOO_CALLBACK_TYPE(ext_yahoo_webcam_closed)(int id, char *who, int reason);
 
 
+/*
+ * Name: ext_yahoo_got_search_result
+ *      Called when the search result received from server
+ * Params:
+ *      id  	 - the id that identifies the server connection
+ * 	found	 - total number of results returned in the current result set
+ * 	start	 - offset from where the current result set starts
+ * 	total	 - total number of results available (start + found <= total)
+ * 	contacts - the list of results as a YList of yahoo_found_contact
+ */
+void YAHOO_CALLBACK_TYPE(ext_yahoo_got_search_result)(int id, int found, int start, int total, YList *contacts);
+
+
 
 /*
  * Name: ext_yahoo_error
